[package]
name = "collatz_conjecture_fast"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_pool = "0.6.0"
jemallocator = "0.3.2"
smallvec = "1.6.1"
num_cpus = "1.13.0"
once_cell = "1.8.0"
dashmap = "4.0.2"
twox-hash = "1.6.1"
itertools = "0.10.1"